Fix horizontal scrolling bug

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,7 +1,6 @@
 .header {
 	margin: 10px 10px;
 	display: flex;
-	width: 100%;
 	justify-content: center;
 
 	> * {
